finished 6 and organization

--- a/HW2_Notebook.ipynb
+++ b/HW2_Notebook.ipynb
@@ -68,6 +68,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 to the power  2\n",
+      "3 to the power  1\n",
+      "191 to the power  1\n",
+      "1993 to the power  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prime_factors(n):\n",
+    "    i = 2\n",
+    "    factors = []\n",
+    "    while i * i <= n:\n",
+    "        if n % i:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            n //= i\n",
+    "            factors.append(i)\n",
+    "    if n > 1:\n",
+    "        factors.append(n)\n",
+    "    return factors\n",
+    "a = prime_factors(4567956)\n",
+    "from collections import Counter\n",
+    "counter = Counter(a)\n",
+    "for key,val in counter.items():\n",
+    "    print(key, 'to the power ', val)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
