commit of older files and hw 7 notebook work

--- a/Homework_Notebooks/HW7 play.ipynb
+++ b/Homework_Notebooks/HW7 play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "Text(0.5, 1.0, 'y00, y01, y02, y03')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,21 +203,27 @@
     "        # for n bins there are n+1 bin points!\n",
     "        columnAve=(column[1][columnMaxInd] + column[1][columnMaxInd + 1])/2 \n",
     "        \n",
-    "        print(columnAve)\n",
+    "        return columnAve\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.077812883172459\n"
-     ]
+     "data": {
+      "text/plain": [
+       "-1.077812883172459"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -239,25 +245,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-50-53cc610e12d7>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-50-53cc610e12d7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    __init__(self, filename):\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Tracks:\n",
-    "    __init__(self, filename):"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -268,63 +255,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Need to fit the coordinates of each track to a straight line. Use either np.polyfit/ curve_fit from scipy\n",
-    "# optimize\n",
-    "# Maybe look for the spot that the particle seems to be most localized on the ditribution , then \n",
-    "\n",
-    "from scipy.stats import norm\n",
-    "import matplotlib.mlab as mlab\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# read data from a text file. One number per line\n",
-    "#arch = data['y00']\n",
-    "datos = data['y00']\n",
-    "#for item in len(arch):\n",
-    "#    item = item.strip()\n",
-    "#   if item != '':\n",
-    "#        try:\n",
-    "#           datos.append(float(item))\n",
-    "#        except ValueError:\n",
-    "#           pass\n",
-    "\n",
-    "# best fit of data\n",
-    "(mu, sigma) = norm.fit(datos)\n",
-    "\n",
-    "# the histogram of the data\n",
-    "n, bins, patches = plt.hist(datos, 250, normed=1, facecolor='green', alpha=0.75)\n",
-    "\n",
-    "# add a 'best fit' line\n",
-    "y = mlab.normpdf( bins, mu, sigma)\n",
-    "l = plt.plot(bins, y, 'r--', linewidth=2)\n",
-    "\n",
-    "#plot\n",
-    "plt.xlabel('bins')\n",
-    "plt.ylabel('Probability')\n",
-    "plt.title(r'$\\mathrm{Histogram\\ of\\ IQ:}\\ \\mu=%.3f,\\ \\sigma=%.3f$' %(mu, sigma))\n",
-    "plt.grid(True)\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "## This does not work for my purposes..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## I need to somehow extract the most common bin range.\n",
-    "# what if created a varying range which went from the \n",
-    "# one point in a bin, to two points in a bin, to three\n",
-    "# points in a bin, etc. to one whole bin.\n",
-    "# \n",
-    "avgs = data['y00']\n",
-    "bins = np.array([-2, -1, 0, 1, 2])\n",
-    "binplace = np.digitize(avgs, bins, right=False)\n",
-    "binplace\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
