--- a/amalu_hw8.1
+++ b/amalu_hw8.1
@@ -51,17 +51,20 @@ a1.tick_params("both", direction='in', length=7, right=True, which='minor')
 # adding on begins here
 
 # i think my functions needs to be fixed - Amalu
-# ------ SOMEONE HELP BELOW
 
-#background pdf
-def b_pdf(slope, b):
+x = bins
+# background pdf
+b_pdf = np.array()
+def bees_pdf(slope, b):
 # this should return a numpy array not just the equation
-	return -(slope)*x + b
+	-(slope)*x + b
+	return b_pdf
 	
 # signal pdf
-def s_pdf(x):
+s_pdf = np.array()
+def sees_pdf(x):
 # thsi should return a numpy array not just the equation
-	return np.exp(-np.power(x - 155, 2.) / (2 * np.power(5, 2.)))
+	return np.exp(-np.power(x - 155, 2.) / (2 * np.power(5, 2.))) 
 
 
 # help aboveeeeee ---------------------------
