--- a/Roten-8831794-hw8/HW8 2.1.ipynb
+++ b/Roten-8831794-hw8/HW8 2.1.ipynb
@@ -174,27 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.0207397575757575"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "B = 5.28\n",
     "D = 2.01\n",
     "pion = 0.1396\n",
     "\n",
     "ParticleDecayInfo = NRG_P(B, D, pion)\n",
-    "\n"
+    "print(ParticleDecayInfo[0])\n",
+    "print(ParticleDecayInfo[1]\n",
+    "ParticleDecayInfo[2]\n",
+    "ParticleDecayInfo[3]"
    ]
   },
   {
