added #1, #2, README inside /assignment directory

--- a/Roten-8831794-hw8/HW8 2.1.ipynb
+++ b/Roten-8831794-hw8/HW8 2.1.ipynb
@@ -169,24 +169,36 @@
     "    E1 = (mass_parent**2+mass_daughter1**2-mass_daughter2**2)/(2*mass_parent)\n",
     "    E2 = (mass_parent**2+mass_daughter2**2-mass_daughter1**2)/(2*mass_parent)\n",
     "    p1 = p2 = sqrt(E1**2-mass_daughter1**2)\n",
-    "    return E1, E2, p1, p2"
+    "    return E1, E2, p1, p2?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0207397575757575\n",
+      "2.2592602424242427\n",
+      "2.2549431662458472\n",
+      "2.2549431662458472\n"
+     ]
+    }
+   ],
    "source": [
     "B = 5.28\n",
     "D = 2.01\n",
     "pion = 0.1396\n",
     "\n",
     "ParticleDecayInfo = NRG_P(B, D, pion)\n",
+    "\n",
     "print(ParticleDecayInfo[0])\n",
-    "print(ParticleDecayInfo[1]\n",
-    "ParticleDecayInfo[2]\n",
-    "ParticleDecayInfo[3]"
+    "print(ParticleDecayInfo[1])\n",
+    "print(ParticleDecayInfo[2])\n",
+    "print(ParticleDecayInfo[3])"
    ]
   },
   {
